shuffle, loop and misc. options